# api/swagger.json
@@ -1348,7 +1348,7 @@
                 }
             }
         },
-        "/recommendation/resource/securityGroups": {
+        "/recommendation/resources/securityGroups": {
             "post": {
                 "description": "Recommend an appropriate security group for cloud migration\n\n[Note] `desiredProvider` and `desiredRegion` are required.\n- `desiredProvider` and `desiredRegion` can set on the query parameter or the request body.\n\n- If desiredProvider and desiredRegion are set on request body, the values in the query parameter will be ignored.",
                 "consumes": [
@@ -1421,7 +1421,7 @@
                 }
             }
         },
-        "/recommendation/resource/vNet": {
+        "/recommendation/resources/vNet": {
             "post": {
                 "description": "Recommend an appropriate virtual network for cloud migration\n\n[Note] `desiredProvider` and `desiredRegion` are required.\n- `desiredProvider` and `desiredRegion` can set on the query parameter or the request body.\n\n- If desiredProvider and desiredRegion are set on request body, the values in the query parameter will be ignored.",
                 "consumes": [
@@ -1494,7 +1494,7 @@
                 }
             }
         },
-        "/recommendation/resource/vmOsImages": {
+        "/recommendation/resources/vmOsImages": {
             "post": {
                 "description": "Recommend an appropriate OS image for cloud migration\n\n[Note] `desiredProvider` and `desiredRegion` are required.\n- `desiredProvider` and `desiredRegion` can set on the query parameter or the request body.\n\n- If desiredProvider and desiredRegion are set on request body, the values in the query parameter will be ignored.",
                 "consumes": [
@@ -1567,7 +1567,7 @@
                 }
             }
         },
-        "/recommendation/resource/vmSpecs": {
+        "/recommendation/resources/vmSpecs": {
             "post": {
                 "description": "Recommend an appropriate VM specification for cloud migration\n\n[Note] `desiredProvider` and `desiredRegion` are required.\n- `desiredProvider` and `desiredRegion` can set on the query parameter or the request body.\n\n- If desiredProvider and desiredRegion are set on request body, the values in the query parameter will be ignored.",
                 "consumes": [
@@ -1943,6 +1943,9 @@
                     "type": "integer"
                 },
                 "description": {
+                    "type": "string"
+                },
+                "status": {
                     "type": "string"
                 },
                 "targetSecurityGroupList": {
@@ -3947,6 +3950,12 @@
                 "description": {
                     "type": "string"
                 },
+                "sourceServers": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "status": {
                     "type": "string"
                 },
@@ -4001,7 +4010,7 @@
                 "status": {
                     "type": "string"
                 },
-                "targetVmSpecs": {
+                "targetVmSpecList": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.TbSpecInfo"
